# Ogien-i-woda-SFML

./: CMakeLists.txt  README.md
GameState/: GameState.h
Level/: Level.h
MenuState/: MenuState.cpp  MenuState.h
PlayState/: PlayState.h
Player/: Player.h
QT app/OgienIWoda/: CMakeLists.txt  level1.cpp  level1.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
QT app/build-OgienIWoda-Desktop_Qt_6_6_2_GCC_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeCache.txt.prev  OgienIWoda  build.ninja  cmake_install.cmake
QT app/build-OgienIWoda-Desktop_Qt_6_6_2_GCC_64bit-Debug/.cmake/api/v1/reply.prev/: cache-v2-eb9b54c1e83358868a7d.json  cmakeFiles-v1-09c6a30e1a16564a8c3b.json  cmakeFiles-v1-2bf1e97d2545afdc7934.json  codemodel-v2-9ffac820c2fa57ef8c89.json  codemodel-v2-ef6b5faa9cbf7444ebbf.json  (+7 more)
QT app/build-OgienIWoda-Desktop_Qt_6_6_2_GCC_64bit-Debug/.qt/: QtDeploySupport.cmake
QT app/build-OgienIWoda-Desktop_Qt_6_6_2_GCC_64bit-Debug/.qtc_clangd/: compile_commands.json
QT app/build-OgienIWoda-Desktop_Qt_6_6_2_GCC_64bit-Debug/OgienIWoda_autogen/: deps
QT app/build-OgienIWoda-Desktop_Qt_6_6_2_GCC_64bit-Debug/OgienIWoda_autogen/EWIEGA46WW/: moc_level1.cpp  moc_level1.cpp.d  moc_mainwindow.cpp  moc_mainwindow.cpp.d
QT app/build-OgienIWoda-Desktop_Qt_6_6_2_GCC_64bit-Debug/OgienIWoda_autogen/include/: ui_mainwindow.h
Tile/: Tile.h
engine/: engine.cpp  engine.h
snake_minigame/: snake_minigame.cpp
snake_minigame/build-snake_minigame-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: Makefile  Makefile.Debug  Makefile.Release
src/: main.cpp
(+67 files in other folders)
